--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,17 @@ html {
     }
   .background {
     background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+    color: white;
+    text-decoration: none;
   }
   #footer {
     text-align: left;
+    background-color: dimgrey;
+    color: white;
+    font-size: 11px;
   }
+.nav {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+}
